--- a/IA.ipynb
+++ b/IA.ipynb
@@ -6,7 +6,7 @@
       "name": "IA.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMiKNnpivVCXcBeLdxaYvWg",
+      "authorship_tag": "ABX9TyMXSP5sDE1PBFeyRn14/ZHS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "colab": {}
       },
       "source": [
-        "from c"
+        "from numpy import*"
       ],
       "execution_count": 0,
       "outputs": []
